--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,10 @@
 <html>
 <head> 
 <title>hello world</title>
-</head>
+<style type="txt/css" rel="stylesheet">
+  p{color:"#ADD8E6"}
+  </style>
+  </head>
 <body>
   <p>Hello World</p>
 </body>
